--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "backend"
   ],
   "author": "Mangalam",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
