--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://mangalam:your-password@cluster0.26gnz.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=<you your own secret key>
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=<you your own secret key>
+REFRESH_TOKEN_EXPIRY=10d  
