learning multer and cloudinary to upload files and stuff

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,10 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://mangalam:your-password@cluster0.26gnz.mongodb.net
 CORS_ORIGIN=*
-ACCESS_TOKEN_SECRET=<you your own secret key>
+ACCESS_TOKEN_SECRET=<use your own secret key>
 ACCESS_TOKEN_EXPIRY=1d
-REFRESH_TOKEN_SECRET=<you your own secret key>
+REFRESH_TOKEN_SECRET=<use your own secret key>
 REFRESH_TOKEN_EXPIRY=10d  
+CLOUDINARY_CLOUD_NAME=<use your own cloud name>
+CLOUDINARY_API_KEY=<use your own api key>
+CLOUDINARY_API_SECRET=<use your own api secret>
